Make Java 8 friendly